aulas sobre reuso e tecnicas de reuso

--- a/gsi526.html
+++ b/gsi526.html
@@ -102,9 +102,9 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 04 - Processo Unificado.pdf"> Aula 04 - O Processo Unificado</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 05 - Outros Processos.pdf"> Aula 05 - Outros Processos</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 06 - Smells.ppt"> Aula 06 - <i>Bad Smells</i> e Refatoração</a></button></li>	
-						<!-- <li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Reuso-Parte1.ppt"> Aula 8 - Reuso de Software</a></button></li>	
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 8-Técnicas de Reuso.ppt"> Aula 8 - Técnicas de Reuso de Software</a></button></li>	
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 9 - Arquitetura de Software.pptx"> Aula 9 - Arquitetura de Software</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 07 - Reuso de Software.ppt"> Aula 07 - Reuso de <i>Software</i></a></button></li>	
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 08 - Técnicas de Reuso.ppt"> Aula 08 - Técnicas de Reuso de <i>Software</i></a></button></li>	
+						<!-- <li><i class="icon-book"></i><a href="aulas/gsi526/Aula 9 - Arquitetura de Software.pptx"> Aula 9 - Arquitetura de Software</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula10 - Testes de Desenvolvimento.pdf"> Aula 10 - Testes de Desenvolvimento</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula10 - Testes de Unidade.pdf"> Aula 10 - Testes de Unidade </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula10 - Testes de Release.pdf"> Aula 10 - Testes de Release </a></button></li>
