--- a/gsi526.html
+++ b/gsi526.html
@@ -84,11 +84,11 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(30/03)</b></li>
+					<li>Prova 1 - 25 pts <b>(13/04)</b></li>
 					<li>Prova 2 - 30 pts <b>(04/05)</b></li>
 					<li>Prova 3 - 30 pts <b>(15/06)</b></i></li>
-					<li>Lista 1 - 1,5 pts <b>(30/03)</b></i></li>
-					<li>Lista 2 - 1,5 pts <b>(04/05)</b></i></li>
+					<li>Lista 1 - 1,5 pts <b>(13/04)</b></i></li>
+					<li>Lista 2 - 1,5 pts <b>(13/04)</b></i></li>
 					<li>Lista 3 - 2,0 pts <b>(15/06)</b></i></li>
 					<li>Seminário - 10 pts <b>(18/06 e 22/06)</b></li>
 					</ul>
@@ -127,11 +127,11 @@
 						</ul>
 					</div>
 					<div>
-					<!--<b>Links diversos:</b>
+					<b>Links diversos:</b>
 					<ul>
-					 <li><i class="icon-book"></i><a href="aulas/gsi526/lista_prova1.pdf"> Lista para a Prova 1</a></button></li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista_prova2.pdf"> Lista para a Prova 2</a></button></li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista_prova3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Lista para a Prova 3</b></a></button></li>
+					<li><i class="icon-book"></i> <img src="images/new2.gif" alt="" height="11" width="28"><a href="aulas/gsi526/lista1.pdf"> Lista 01 para a Prova 1</a></button></li>
+					<li><i class="icon-book"></i> <img src="images/new2.gif" alt="" height="11" width="28"><a href="aulas/gsi526/lista2.pdf"> Lista 02 para a Prova 1</a></button></li>
+					<!-- <li><i class="icon-book"></i><a href="aulas/gsi526/lista_prova3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Lista para a Prova 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/seminário.pdf"> <b>Seminário</b></a></button></li>
