--- a/material.html
+++ b/material.html
@@ -77,7 +77,7 @@
 				<div class="fh5co-entry padding">
 					<div>
 						<ul>
-						<li><a href="gsi526.html"><i class="icon-home"></i><i> Engenharia de Software I (Teoria) <b>(Segunda: 10h40 - 12h20 / Quinta: 10h40 - 12h20)</b></i></a></li>
+						<li><a href="gsi526.html"><i class="icon-home"></i><i> Engenharia de Software I (Teoria) <b>(Segunda: 10h40 - 12h20 // Quinta: 10h40 - 12h20)</b></i></a></li>
 						<li><a href="poo.html"><i class="icon-home"></i><i> Programação de Computadores 2 (Teoria) <b>(Terça: 13h00 - 14h40)</b></i></a></li>
 						<li><a href="gsi526-lab.html"><i class="icon-home"></i><i> Engenharia de Software I Lab. (Prática) <b>(Quarta: 09h00 - 12h20)</b></i></a></li>
 						<li><a href="poo-lab.html"><i class="icon-home"></i><i> Programação de Computadores 2 Lab. (Prática) <b>(Quinta: 13h00 - 16h30)</b></i></a></li>
