--- a/gsi526.html
+++ b/gsi526.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 1º Semestre de 2020 - Engenharia de Computação</span>
+				<span>Disciplinas 2º Semestre de 2020 - Engenharia de Computação</span>
 				<h2>Engenharia de Software I</h2>
 			</div>
 		</div>
@@ -80,7 +80,7 @@
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/plano-esof.pdf"> Plano de Ensino</a></li>
 					</ul>
-					</div> -->
+					</div> 
 					<div>
 					<b>Avaliação:</b>
 					<ul>
@@ -92,12 +92,12 @@
 					<li>Lista 3 - 2,0 pts <b>(15/06)</b></i></li>
 					<li>Seminário - 10 pts <b>(18/06 e 22/06)</b></li>
 					</ul>
-					</div>
+					</div> -->
 					<div>
 						<b>Material:</b>
 						<ul>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 01 - Introdução à Engenharia de Software.pdf"> Aula 01 - Introdução à Engenharia de Software</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 02 - Extreme Programming.pdf"> Aula 02 - Extreme Programming</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula1 - Requisitos de Software.pptx"> Aula 01 - Requisitos de Software</a></button> <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs&t=373s"> (Videoaula) </a></li>
+						<!-- <li><i class="icon-book"></i><a href="aulas/gsi526/Aula 02 - Extreme Programming.pdf"> Aula 02 - Extreme Programming</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 03 - Scrum.pdf"> Aula 03 - Scrum (+ Kanban e Lean)</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 04 - Processo Unificado.pdf"> Aula 04 - O Processo Unificado</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 05 - Outros Processos.pdf"> Aula 05 - Outros Processos</a></button></li>
@@ -126,7 +126,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula10.pdf"> Aula 10</a></button></li>-->
 						</ul>
 					</div>
-					<div>
+					<!-- <div>
 					<b>Links diversos:</b>
 					<ul>
 					<li><i class="icon-book"></i> <img src="images/new2.gif" alt="" height="11" width="28"><a href="aulas/gsi526/lista1.pdf"> Lista 01 para a Prova 1</a></button></li>
@@ -142,10 +142,10 @@
 					<!-- <li><i class="icon-stackoverflow"></i><a href="https://www.w3schools.com/"> Tutorial sobre PHP, JavaScript, HTML, CSS</a></button></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/gsi538/GWT-Tutorial.pdf"> Tutorial: Como instalar o plugin do GWT no Eclipse IDE</a></button></li>
 					<li><i class="icon-stackoverflow"></i><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank">Onde aprender tudo sobre o framework Web GWT?</a></li>
-					<li><i class="icon-stackoverflow"></i><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li> -->
+					<li><i class="icon-stackoverflow"></i><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li> 
 					</ul>
-					</div>
-				</div>
+					</div> -->
+				</div> 
 			</div>
 		</div>
 	</div>
