atualizei a pagina de pc2 e de ES

--- a/poo.html
+++ b/poo.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 1º Semestre de 2020 - Engenharia Elétrica</span>
+				<span>Disciplinas 2º Semestre de 2020 - Engenharia Elétrica</span>
 				<h2>Programação de Computadores 2</h2>
 			</div>
 		</div>
@@ -81,23 +81,23 @@
 					<li><i class="icon-book"></i><a href="aulas/poo/plano-modelagem.pdf"> Plano de Ensino</a></li>
 					</ul>
 					</div> -->
-					<div>
+					<!--<div>
 					<b>Avaliação:</b>
 					<ul>
 					<li>Prova 1 - 30 pts <b>(31/03)</b></li>
 					<li>Prova 2 - 35 pts <b>(05/05)</b></li>
 					<li>Prova 3 - 35 pts <b>(16/06)</b></li>					
 					</ul>
-					</div>
+					</div> -->
 					<b>Material:</b>
 					<div>
 						<ul>						
 						<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 02 - Conceitos de POO</a></li>
+						<!-- <li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 02 - Conceitos de POO</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução a Java.ppt"> Aula 03 - Introdução a Java</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 04 - Semântica de Referência</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/5.Associação entre Objetos.ppt"> Aula 05 - Associação entre Objetos</a></li>
-						<!-- <li><i class="icon-book"></i><a href="aulas/poo/6.Herança.ppt"> Aula 6 - Herança</a></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/6.Herança.ppt"> Aula 6 - Herança</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/7.Classes Abstratas e Interfaces.ppt"> Aula 7 - Classes Abstratas e Interfaces</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/8-Coleções.ppt"> Aula 8 - Coleções</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/9.Polimorfismo.ppt"> Aula 9 - Polimorfismo</a></li>
@@ -133,14 +133,14 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/aula7.pdf"> Aula 7</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/aula8.pdf"> Aula 8</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/aula9.pdf"> Aula 9</a></li>
-						<li><i class="icon-book"></i><a href="aulas/poo/aula10.pdf"> Aula 10</a></li>-->
+						<li><i class="icon-book"></i><a href="aulas/poo/aula10.pdf"> Aula 10</a></li> 
 						</ul>
-					</div>
-					<div>
+					</div> -->
+					<!-- <div>
 					<b>Links diversos:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="https://drive.google.com/open?id=1bk_GlO6hMw9xxn1XbF60MC7H2k8AnCW2"> <img src="images/new2.gif" alt="" height="11" width="28"> <i>Livro: Java Como Programar 6ª edição (Deitel)</i></a></li> 
-					<!-- <li><i class="icon-book"></i><a href="aulas/poo/gabarito_prova3_pc2.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Gabarito da Prova 3</b></a></button></li>
+					 <li><i class="icon-book"></i><a href="aulas/poo/gabarito_prova3_pc2.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Gabarito da Prova 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/poo/notas_pc2_cefet_2019_new.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas da Prova 3</b></a></button></li> 
 					</ul>
 					</div> -->
