--- a/poo.html
+++ b/poo.html
@@ -89,11 +89,11 @@
 					<li>Prova 3 - 35 pts <b>(16/06)</b></li>					
 					</ul>
 					</div> -->
-					<b>Material:</b>
+					<!-- <b>Material:</b> -->
 					<div>
 						<ul>						
-						<li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução</a></li>
-						<!-- <li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 02 - Conceitos de POO</a></li>
+						<!-- <li><i class="icon-book"></i><a href="aulas/poo/1.Introdução.ppt"> Aula 01 - Introdução</a></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/2.POO-Conceitos.ppt"> Aula 02 - Conceitos de POO</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/3.Introdução a Java.ppt"> Aula 03 - Introdução a Java</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/4.Semântica de Referência.ppt"> Aula 04 - Semântica de Referência</a></li>
 						<li><i class="icon-book"></i><a href="aulas/poo/5.Associação entre Objetos.ppt"> Aula 05 - Associação entre Objetos</a></li>
