--- a/gsi526.html
+++ b/gsi526.html
@@ -97,7 +97,8 @@
 						<!-- <b>Material:</b> -->
 						<ul>
 						<!-- <li><i class="icon-book"></i><a href="aulas/gsi526/Aula1 - Requisitos de Software.pptx"> Aula 01 - Requisitos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs&t=373s"> Ver Videoaula </a>)</li>
-						 <li><i class="icon-book"></i><a href="aulas/gsi526/Aula 02 - Extreme Programming.pdf"> Aula 02 - Extreme Programming</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula2 - Processos.pptx"> Aula 02 - Processos de Software</a></button>  ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=D39AikmEIuI"> Ver Videoaula </a>)</li>
+						<!-- <li><i class="icon-book"></i><a href="aulas/gsi526/Aula 02 - Extreme Programming.pdf"> Aula 02 - Extreme Programming</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 03 - Scrum.pdf"> Aula 03 - Scrum (+ Kanban e Lean)</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 04 - Processo Unificado.pdf"> Aula 04 - O Processo Unificado</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/Aula 05 - Outros Processos.pdf"> Aula 05 - Outros Processos</a></button></li>
