--- a/poo-lab.html
+++ b/poo-lab.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 1º Semestre de 2020 - Engenharia Elétrica</span>
+				<span>Disciplinas 2º Semestre de 2020 - Engenharia Elétrica</span>
 				<h2>Programação de Computadores 2 Lab.</h2>
 			</div>
 		</div>
@@ -81,24 +81,24 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/plano-modelagem.pdf"> Plano de Ensino</a></li>
 					</ul>
 					</div> -->
-					<div>
+					<!-- <div>
 					<b>Avaliação:</b>
 					<ul>
 					<li>Trabalho 1 - 20 pts <b>(16/04)</b><a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <img src="images/new2.gif" alt="" height="11" width="28"> <i> Trabalho 1 </i></a></li>
-					<li>Trabalho 2 - 35 pts <b>(07/05)</b><!--<a href="aulas/lab-poo/Prática 6.pdf"> - <i> Trabalho 2 </i></a>--></li>
-					<li>Trabalho 3 - 45 pts <b>(18/06)</b><!--<a href="aulas/lab-poo/TP3.pdf"> - <i> <img src="images/new2.gif" alt="" height="11" width="28"> Trabalho 3 </i></a>--></li>
+					<li>Trabalho 2 - 35 pts <b>(07/05)</b><!--<a href="aulas/lab-poo/Prática 6.pdf"> - <i> Trabalho 2 </i></a></li>
+					<li>Trabalho 3 - 45 pts <b>(18/06)</b><!--<a href="aulas/lab-poo/TP3.pdf"> - <i> <img src="images/new2.gif" alt="" height="11" width="28"> Trabalho 3 </i></a></li>
 					<!--<li>Prova 2 - 35 pts <b>(22/10)</b></li>
-					<li>Prova 3 - 35 pts <b>(26/11)</b></li> -->					
+					<li>Prova 3 - 35 pts <b>(26/11)</b></li> 					
 					</ul>
-					</div> 
+					</div> --> 
 					<b>Material:</b>
 					<div>
 						<ul>						
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 1.pdf"> Exercício Prático 1</a></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-poo/Pratica 2.pdf"> Exercício Prático 2</a></li>
+						<!-- <li><i class="icon-book"></i><a href="aulas/lab-poo/Pratica 2.pdf"> Exercício Prático 2</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 3.pdf"> Exercício Prático 3</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 4.pdf"> Exercício Prático 4</a></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 5.pdf"> Exercício Prático 5</a></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 5.pdf"> Exercício Prático 5</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 6.pdf"> Exercício Prático 6</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 7.pdf"> Exercício Prático 7</a></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/Prática 8.pdf"> Exercício Prático 8</a></li>
@@ -143,6 +143,17 @@
 						<li><i class="icon-book"></i><a href="aulas/lab-poo/aula10.pdf"> Aula 10</a></li>-->
 						</ul>
 					</div>
+					<div>
+					<b>Videoaulas:</b>
+					<ul>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=aR7CKNFECx0&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=3"> O que é um Objeto? </a></li>
+					<!-- <li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=wNaoX6VOj54&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=4"> Criando Classes e Objetos em Java </a></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=jFI-qqitzwk&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=6"> O que é Visibilidade em um Objeto? </a></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=LV2243j4RTQ&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=7"> Configurando Visibilidade de Atributos e Métodos </a></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=g2x9oyBFSco&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=8"> Métodos Especiais </a></li>
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=6i-_R5cAcEc&list=PLHz_AreHm4dkqe2aR0tQK74m8SFe-aGsY&index=9"> Métodos Getter, Setter e Construtor </a></li> -->
+					</ul>
+					</div> 
 					<!-- <div>
 					<b>Links diversos:</b>
 					<ul>
