videoaulas e livros sobre tecnologias de desenvolvimento de SW

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -68,7 +68,7 @@
 			</nav>
 			<div class="page-title">
 				<img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
-				<span>Disciplinas 1º Semestre de 2020 - Engenharia de Computação</span>
+				<span>Disciplinas 2º Semestre de 2020 - Engenharia de Computação</span>
 				<h2>Engenharia de Software I Lab.</h2>
 			</div>
 		</div>
@@ -81,7 +81,7 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/plano-esof.pdf"> Plano de Ensino</a></li>
 					</ul>
 					</div> -->
-					<div>
+					<!-- <div>
 					<b>Avaliação e Prazos:</b>
 					<ul>
 					<li>Trabalho 1 - 20 pts <b>(08/04)</b> - <img src="images/new2.gif" alt="" height="11" width="28"> <i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1</a></i></li>
@@ -92,8 +92,8 @@
 						<li>Entrega da segunda fase e Arguição <b>(17/06)</b></li>
 						</ul>
 					</ul>
-					</div> 
-					<b>Material:</b>
+					</div> -->
+					<!-- <b>Material:</b>
 					<div>
 						<ul>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 01 - Exercícios de POO </a></button></li>
@@ -115,20 +115,20 @@
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/notas_es_lab_cefet_2019.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Notas Finais</b></a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>			
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicio02.pdf"> Exercício 02</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/aula10.pdf"> Aula 10</a></button></li> -->
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/aula10.pdf"> Aula 10</a></button></li> 
 						</ul> 
-					</div> 
+					</div> -->
 					<div>
-					<b>Código-fonte de projetos e links diversos:</b>
+					<b>Videoaulas:</b>
 					<ul>
-					<li><i class="icon-stackoverflow"></i><a href="https://www.eclipse.org/downloads/packages/release/mars/2/eclipse-ide-java-ee-developers" target="_blank">Link do Eclipse IDE Mars 2</a></li>
+					<!--<li><i class="icon-stackoverflow"></i><a href="https://www.eclipse.org/downloads/packages/release/mars/2/eclipse-ide-java-ee-developers" target="_blank">Link do Eclipse IDE Mars 2</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank">Onde aprender tudo sobre o framework Web GWT?</a></li>
 					<li><i class="icon-stackoverflow"></i><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li>
 					 <li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/PortariaPredio.zip"> Sistema de Portaria de Prédio</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/EmpresaFuncionarios.zip"> Sistema de Tipos de Funcionários</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/HelloWorld.zip"> Hello World GWT Application</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/imc.zip"> IMC GWT Application</a></li>
-					<!--<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/StockWatcher.zip"> StockWatcher GWT Application</a></li>
+					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/StockWatcher.zip"> StockWatcher GWT Application</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/LoginApp.zip"> Login GWT Application</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/Cars.zip"> Cars GWT Application</a></li>
 					<li><i class="icon-stackoverflow"></i><a href="aulas/lab-programacao/CarSales.zip"> Car Sales GWT Application</a></li>
