coloquei uma videoaula sobre criacao de classes e objetos em Java

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 						<span class="fh5co-post-date">March 27, 2019</span>
 						<h2><a href="jsep19.html">Discovering Common Bug-fix Patterns: A Large-Scale Observational Study</a></h2>
 						<p><b>E. Campos</b>, M. Maia</p>
-						<p><i>Journal of Software: Evolution and Process (JSEP), 38 pages, Wiley, 2019. (To appear).</i></p>
+						<p><i>Journal of Software: Evolution and Process (JSEP), 38 pages, Wiley, 2019.</i></p>
 						<button class="button"><a href="papers/jsep19.pdf">Paper</a></button>
 						<!--<button class="button"><a href="papers/ist19.bib">BibTex</a></button>-->						
 					</div>
