aula sobre servicos wbe

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -93,15 +93,16 @@
 						</ul>
 					</ul>
 					</div> -->
-					<!-- <b>Material:</b>
 					<div>
+					<b>Material:</b>
 						<ul>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 01 - Exercícios de POO </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/web_services.pdf"> Introdução à Web Services</a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 01 - Exercícios de POO </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/IMC-massa-corporal.pdf"> Aula 02 - Cálculo do IMC </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/GWT-Tutorial.pdf"> Aula 02 - Tutorial de GWT </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/pluginGWT.pdf"> Aula 02 - Plugin do GWT (Instalação) </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - Git.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Aula 03 - Git </a></button></li>
-						<!-- <li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=brSwmLQA0iA" target="_blank"> <b>Primeiros passos com Node.js - Parte #1 </b></a></li>
+						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=brSwmLQA0iA" target="_blank"> <b>Primeiros passos com Node.js - Parte #1 </b></a></li>
 						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=_Lu1JGrPl6g" target="_blank"> <b>React #1 - Preparando o ambiente para desenvolvimento </b></a></li>
 						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=ov7VjrH5kfw" target="_blank"> <b>Criando um Blog do Zero com Node.js e React.js (Parte 1) </b></a></li>
 						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=1mLbR-TbNdM" target="_blank"> <b>Criando um Blog do Zero com Node.js e React.js (Parte 2) </b></a></li>
@@ -116,8 +117,8 @@
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 1 - Exercícios de POO </a></button></li>			
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicio02.pdf"> Exercício 02</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/aula10.pdf"> Aula 10</a></button></li> 
-						</ul> 
-					</div> -->
+						</ul> -->
+					</div> 
 					<div>
 					<b>Videoaulas:</b>
 					<ul>
