aula sobre web services

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -96,7 +96,7 @@
 					<div>
 					<b>Material:</b>
 						<ul>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/web_services.pdf"> Introdução à Web Services</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/web_services.pdf"> Web Services</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 01 - Exercícios de POO </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/IMC-massa-corporal.pdf"> Aula 02 - Cálculo do IMC </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/GWT-Tutorial.pdf"> Aula 02 - Tutorial de GWT </a></button></li>
