--- a/poo-lab.html
+++ b/poo-lab.html
@@ -76,6 +76,12 @@
 			<div class="fh5co-post"> 
 				<div class="fh5co-entry padding">
 					<div>
+					<b>Seleção de Monitor:</b>
+					<ul>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_entrevistas.pdf"> Horário das Entrevistas</a> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					</ul>
+					</div> 
+					<div>
 					<b>Plano:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/plano_pc2_lab.pdf"> Plano Didático</a></li>
