--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -81,18 +81,18 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-programacao/plano-didatico-es-lab.pdf"> Plano Didático</a></li>
 					</ul>
 					</div> 
-					<!-- <div>
+					<div>
 					<b>Avaliação e Prazos:</b>
 					<ul>
-					<li>Trabalho 1 - 20 pts <b>(08/04)</b> - <img src="images/new2.gif" alt="" height="11" width="28"> <i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1</a></i></li>
-					<li>Trabalho 2 - 80 pts</li>
+					<li>Trabalho 1 - 30 pts <b>(Entrega: 30/09)</b> - <img src="images/new2.gif" alt="" height="11" width="28"> <i><a href="aulas/lab-programacao/Trabalho1-LabES.pdf"> Trabalho 1</a></i></li>
+					<!--<li>Trabalho 2 - 80 pts</li>
 						<ul>
 						<li>Definição dos grupos <b>(até 22/04)</b></li>
 						<li>Entrega da primeira fase e Arguição <b>(20/05)</b></li>
 						<li>Entrega da segunda fase e Arguição <b>(17/06)</b></li>
-						</ul>
+						</ul> -->
 					</ul>
-					</div> -->
+					</div> 
 					<div>
 					<b>Material:</b>
 						<ul>
