Trabalho Pratico 1 de Lab. PC2 no ar

--- a/poo-lab.html
+++ b/poo-lab.html
@@ -87,16 +87,16 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/plano_pc2_lab.pdf"> Plano Didático</a></li>
 					</ul>
 					</div> 
-					<!-- <div>
+					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Trabalho 1 - 20 pts <b>(16/04)</b><a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <img src="images/new2.gif" alt="" height="11" width="28"> <i> Trabalho 1 </i></a></li>
-					<li>Trabalho 2 - 35 pts <b>(07/05)</b><!--<a href="aulas/lab-poo/Prática 6.pdf"> - <i> Trabalho 2 </i></a></li>
+					<li>Trabalho 1 - 30 pts <b>(Entrega: 24/09)</b><a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <img src="images/new2.gif" alt="" height="11" width="28"> <i> Trabalho 1 </i></a></li>
+					<!-- <li>Trabalho 2 - 35 pts <b>(07/05)</b><!--<a href="aulas/lab-poo/Prática 6.pdf"> - <i> Trabalho 2 </i></a></li>
 					<li>Trabalho 3 - 45 pts <b>(18/06)</b><!--<a href="aulas/lab-poo/TP3.pdf"> - <i> <img src="images/new2.gif" alt="" height="11" width="28"> Trabalho 3 </i></a></li>
 					<!--<li>Prova 2 - 35 pts <b>(22/10)</b></li>
-					<li>Prova 3 - 35 pts <b>(26/11)</b></li> 					
+					<li>Prova 3 - 35 pts <b>(26/11)</b></li> -->					
 					</ul>
-					</div> --> 
+					</div>  
 					<b>Material:</b>
 					<div>
 						<ul>						
