aula sobre comandos do git

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -97,8 +97,8 @@
 					<b>Material:</b>
 						<ul>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/web_services.pdf"> Web Services</a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Exercicios.pdf"> Aula 01 - Exercícios de POO </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/IMC-massa-corporal.pdf"> Aula 02 - Cálculo do IMC </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/comandos-git.pptx"> Git (Comandos Básicos) </a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/IMC-massa-corporal.pdf"> Aula 02 - Cálculo do IMC </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/GWT-Tutorial.pdf"> Aula 02 - Tutorial de GWT </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/pluginGWT.pdf"> Aula 02 - Plugin do GWT (Instalação) </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - Git.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Aula 03 - Git </a></button></li>
