--- a/poo.html
+++ b/poo.html
@@ -84,7 +84,7 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(15/09)</b></li>
+					<li>Prova 1 - 25 pts <b>(Terça-feira, 15/09 às 13:00)</b> - <i> Aulas 1, 2, 3, 4 e 5</i></li>
 					<!--<li>Prova 2 - 35 pts <b>(05/05)</b></li>
 					<li>Prova 3 - 35 pts <b>(16/06)</b></li> -->					
 					</ul>
