aulas sobre HTML, CSS e JavaScript

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -96,8 +96,11 @@
 					<div>
 					<b>Material:</b>
 						<ul>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/web_services.pdf"> Web Services</a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/comandos-git.pptx"> Git (Comandos Básicos) </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Web Services.pdf"> Aula 01 - Web Services</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 02 - Git.pptx"> Aula 02 - Git</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - HTML.pdf"> Aula 03 - HTML</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 04 - CSS.pdf"> Aula 04 - CSS</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 05 - JavaScript.pdf"> Aula 05 - JavaScript</a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/IMC-massa-corporal.pdf"> Aula 02 - Cálculo do IMC </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/GWT-Tutorial.pdf"> Aula 02 - Tutorial de GWT </a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/pluginGWT.pdf"> Aula 02 - Plugin do GWT (Instalação) </a></button></li>
