aulas sobre GWT, Plugin GWT e um Projeto o Calculo de IMC

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -101,10 +101,10 @@
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - HTML.pdf"> Aula 03 - HTML</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 04 - CSS.pdf"> Aula 04 - CSS</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 05 - JavaScript.pdf"> Aula 05 - JavaScript</a></button></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/IMC-massa-corporal.pdf"> Aula 02 - Cálculo do IMC </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/GWT-Tutorial.pdf"> Aula 02 - Tutorial de GWT </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/pluginGWT.pdf"> Aula 02 - Plugin do GWT (Instalação) </a></button></li>
-						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - Git.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Aula 03 - Git </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 06 - Tutorial GWT.pdf"> Aula 06 - Tutorial de GWT</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 06 - Plugin GWT.pdf"> Aula 06 - Plugin do GWT (Instalação) </a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 07 - IMC.pdf"> Aula 07 - Cálculo do IMC </a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - Git.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Aula 03 - Git </a></button></li>
 						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=brSwmLQA0iA" target="_blank"> <b>Primeiros passos com Node.js - Parte #1 </b></a></li>
 						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=_Lu1JGrPl6g" target="_blank"> <b>React #1 - Preparando o ambiente para desenvolvimento </b></a></li>
 						<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=ov7VjrH5kfw" target="_blank"> <b>Criando um Blog do Zero com Node.js e React.js (Parte 1) </b></a></li>
