nova data da prova de ES e relatorio de atividades de PC2

--- a/gsi526.html
+++ b/gsi526.html
@@ -84,7 +84,7 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(05/10)</b></li>
+					<li>Prova 1 - 25 pts <b>(14/10 às 10:40)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li>Prova 2 - 30 pts <b>(04/05)</b></li>
 					<li>Prova 3 - 30 pts <b>(15/06)</b></i></li>
 					<li>Lista 1 - 1,5 pts <b>(13/04)</b></i></li>
@@ -142,7 +142,7 @@
 					<div>
 					<b>Listas:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>05/10</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>14/10</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 para a Prova 1</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista_prova3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Lista para a Prova 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
