materia da prova 1 de ES

--- a/gsi526.html
+++ b/gsi526.html
@@ -84,7 +84,7 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <b>(14/10 às 10:40)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 01 a 07</i></li>
+					<li>Prova 1 - 25 pts <b>(14/10 às 10:40)</b> <img src="images/new2.gif" alt="" height="11" width="28"> - <i> Aulas 01 a 07</i></li>
 					<!--<li>Prova 2 - 30 pts <b>(04/05)</b></li>
 					<li>Prova 3 - 30 pts <b>(15/06)</b></i></li>
 					<li>Lista 1 - 1,5 pts <b>(13/04)</b></i></li>
