--- a/gsi526.html
+++ b/gsi526.html
@@ -84,7 +84,7 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Prova 1 - 25 pts <a href="https://docs.google.com/forms/d/12lpIWTc1MpCZq8MTQC9rzHc9jEvrjmEsfj5XRew15Lc/edit#responses" target="_blank"> Gabarito</a></li>
+					<li>Prova 1 - 25 pts <!--<a href="https://docs.google.com/forms/d/12lpIWTc1MpCZq8MTQC9rzHc9jEvrjmEsfj5XRew15Lc/edit#responses" target="_blank"> Gabarito</a> --></li>
 					<!--<li>Prova 2 - 30 pts <b>(04/05)</b></li>
 					<li>Prova 3 - 30 pts <b>(15/06)</b></i></li>
 					<li>Lista 1 - 1,5 pts <b>(13/04)</b></i></li>
