video do Trabalho 3 + Especificacao do Trab. 3

--- a/poo-lab.html
+++ b/poo-lab.html
@@ -91,8 +91,9 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Trabalho 1 - 30 pts <b>(Entrega: 24/09)</b><a href="aulas/lab-poo/Trabalho1-PC2.pdf"> - <i> Trabalho 1 </i></a></li>
-					<li>Trabalho 2 - 30 pts <b>(Entrega: 29/10)</b><a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Trabalho 2 </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<!--<li>Trabalho 3 - 45 pts <b>(18/06)</b><!--<a href="aulas/lab-poo/TP3.pdf"> - <i> <img src="images/new2.gif" alt="" height="11" width="28"> Trabalho 3 </i></a></li>
+					<li>Trabalho 2 - 30 pts <b>(Entrega: 29/10)</b><a href="aulas/lab-poo/Trabalho2-PC2.pdf"> - <i> Trabalho 2 </i></a></li>
+					<li>Trabalho 3 - 30 pts <b>(Entrega: 03/12)</b><a href="aulas/lab-poo/Trabalho3-PC2.pdf"> - <i> Trabalho 3 </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li>Vídeo - 10 pts <b>(Entrega: 03/12)</b></li>
 					<!--<li>Prova 2 - 35 pts <b>(22/10)</b></li>
 					<li>Prova 3 - 35 pts <b>(26/11)</b></li> -->					
 					</ul>
