informacoes sobre o Trab 2 e atualizacao dos pontos e especificacao do trab

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -88,13 +88,12 @@
 					<ul>
 					<li> <i><a href="aulas/lab-programacao/notas_trabalho1.pdf"> Notas do Trabalho 1 (Atualizado em <b>14/10 às 17:30</b>)</a> <img src="images/new2.gif" alt="" height="11" width="28"></i></li>
 					</ul>
-					<li>Trabalho 2 - 30 pts <b>(Entrega: 28/10)</b> - <i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> Trabalho 2</a></i> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<!--<li>Trabalho 3 - 30 pts</li>
-						<ul>
-						<li>Definição dos grupos <b>(até 22/04)</b></li>
-						<li>Entrega da primeira fase e Arguição <b>(20/05)</b></li>
-						<li>Entrega da segunda fase e Arguição <b>(17/06)</b></li>
-						</ul> -->
+					<li>Trabalho 2 - 70 pts <b>(Entrega: 02/12)</b> - <i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> Trabalho 2</a> <img src="images/new2.gif" alt="" height="11" width="28"></i></li>
+					<ul>
+					<li>Primeira Fase e Arguição <b>(28/10)</b></li>
+					<li>Segunda Fase e Arguição <b>(02/12)</b></li>
+					<li>Vídeo do Trabalho <b>(02/12)</b></li>
+					</ul>
 					</ul>
 					</div> 
 					<div>
