lista 02 de exercicios de pc2

--- a/poo.html
+++ b/poo.html
@@ -87,6 +87,7 @@
 					<li>Prova 1 - 25 pts <b>(Terça-feira, 15/09 às 13:00)</b> - <i> Aulas 1, 2, 3, 4 e 5</i></li>
 					<li>Prova 2 - 30 pts <b>(Terça-feira, 20/10 às 13:00)</b> - <i> Aulas 6, 7 e 8</i></li>
 					<li>Lista 1 - 7,5 pts <b>(Data de Entrega: 03/11)</b> <img src="images/deadline.png" alt="" height="25" width="19"></li>
+					<li>Lista 2 - 7,5 pts <b>(Data de Entrega: 03/12)</b> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li>Prova 3 - 35 pts <b>(16/06)</b></li> -->					
 					</ul>
 					</div> 
@@ -161,6 +162,7 @@
 					<li><i class="icon-book"></i><a href="aulas/poo/gabarito_prova3_pc2.txt"> <img src="images/new2.gif" alt="" height="11" width="28"> <b>Gabarito da Prova 3</b></a></button></li> -->
 					<li><i class="icon-book"></i><a href="aulas/poo/notas_pc2_cefet_2020.pdf"> Notas da Prova 1 </a></li> 
 					<li><i class="icon-book"></i><a href="aulas/poo/lista1_pc2.pdf"> Lista 1 <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
+					<li><i class="icon-book"></i><a href="aulas/poo/lista2_pc2.pdf"> Lista 2 <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
 					</ul>
 					</div> 
 				</div>
