notas de todas as fases do trab. 2 de lab. es

--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -90,9 +90,9 @@
 					</ul>
 					<li>Trabalho 2 - 70 pts <b>(Entrega: 02/12)</b> - <i><a href="aulas/lab-programacao/Trabalho2-LabES.pdf"> Trabalho 2</a> <img src="images/new2.gif" alt="" height="11" width="28"></i></li>
 					<ul>
-					<li>Primeira Fase e Arguição <b>(28/10)</b></li>
-					<li>Segunda Fase e Arguição <b>(02/12)</b></li>
-					<li>Vídeo do Trabalho <b>(02/12)</b></li>
+					<li>Primeira Fase e Arguição - 30 pts <b> (28/10)</b></li>
+					<li>Segunda Fase e Arguição - 30 pts <b> (02/12)</b></li>
+					<li>Vídeo do Trabalho - 10 pts <b> (02/12)</b></li>
 					</ul>
 					</ul>
 					</div> 
