lista 3 para prova 3

--- a/gsi526.html
+++ b/gsi526.html
@@ -86,8 +86,8 @@
 					<ul>
 					<li>Prova 1 - 25 pts <b>(14/10)</b> - <i>Aulas 01 a 07</i></li>
 					<li>Prova 2 - 30 pts <b>(09/11)</b> - <i>Aulas 08 a 11</i></li>
-					<!--<li>Prova 3 - 30 pts <b>(15/06)</b></i></li>
-					<li>Lista 1 - 1,5 pts <b>(13/04)</b></i></li>
+					<li>Prova 3 - 30 pts <b>(26/11)</b></i></li>
+					<!--<li>Lista 1 - 1,5 pts <b>(13/04)</b></i></li>
 					<li>Lista 2 - 1,5 pts <b>(13/04)</b></i></li>
 					<li>Lista 3 - 2,0 pts <b>(15/06)</b></i></li>
 					<li>Seminário - 10 pts <b>(18/06 e 22/06)</b></li> -->
@@ -144,9 +144,9 @@
 					<b>Listas:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>14/10</b>)</a></button> </li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>09/11</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista_prova3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Lista para a Prova 3</b></a></button></li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>09/11</b>)</a> <img src="images/deadline.png" alt="" height="25" width="19"></button> </li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>26/11</b>)</a> <img src="images/new2.gif" alt="" height="11" width="28"></button></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/seminário.pdf"> <b>Seminário</b></a></button></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/grupos_trabalho.pdf"> <b>Grupos do Trabalho</b></a></button></li>
